--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,47 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville|Mulish:700&display=swap");
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+:root {
+  --bg-colour: #f0f7f4;
+}
+body {
+  line-height: 1.5;
+  font-family: "Mulish", sans-serif;
+}
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+.container {
+  width: 85%;
+  margin-inline: auto;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+  gap: 2rem;
+  cursor: pointer;
+  padding: 1.5em 0;
+}
+
+.card {
+  background: var(--bg-colour);
+  box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.card img {
+  object-fit: contain;
+}
