--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville|Mulish:700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 
 *,
 *::before,
@@ -15,7 +15,7 @@
 }
 body {
   line-height: 1.5;
-  font-family: "Mulish", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 img,
 picture {
@@ -24,7 +24,7 @@ picture {
 }
 
 .container {
-  max-width: 90%;
+  max-width: 80%;
   margin-inline: auto;
 }
 
@@ -50,7 +50,6 @@ main {
 .featured {
   grid-column: span 2; 
   grid-row: span 2;
-  max-height: auto;
 }
 
 /* Add this CSS in your stylesheet */
@@ -67,7 +66,22 @@ main {
   width: 50px;
   height: 20px;
 }
-
 .card-content:hover .checkbox {
   display: block; /* Show the checkbox on hover */
+}
+
+/* Add this CSS to your stylesheet */
+.images-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.image-thumb {
+  margin: 0.5rem;
+  max-width: 150px; /* Adjust as needed for the thumbnail size */
+}
+
+.image-thumb img {
+  width: 100%;
+  height: auto;
 }
