--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
-
 *,
 *::before,
 *::after {
@@ -39,12 +38,16 @@ main {
 
 .card {
   background: var(--bg-colour);
-  box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 5px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center;
 }
-
 .card img {
   object-fit: cover;
+  
 }
 
 .featured {
@@ -56,7 +59,6 @@ main {
 .card-content {
   position: relative;
 }
-
 .checkbox {
   display: none;
   position: absolute; 
@@ -66,8 +68,12 @@ main {
   width: 50px;
   height: 20px;
 }
-.card-content:hover .checkbox {
-  display: block; /* Show the checkbox on hover */
+.card:hover .checkbox,
+.checked {
+  display: block;
+}
+.checkbox:not(.checked) {
+  display: none;
 }
 
 /* Add this CSS to your stylesheet */
